test/js/node/test/parallel/test-stream-map.js.log.txt
35 |   const composedStream = staticCompose(this, stream);
36 |   if (options?.signal) {
37 |     addAbortSignalNoValidate(options.signal, composedStream);
38 |   }
39 |   return composedStream;
40 | function map(fn, options) {
                 ^
TypeError: The "fn" argument must be of type Function or AsyncFunction. Received: 1
 code: "ERR_INVALID_ARG_TYPE"

      at map (internal:streams/operators:40:13)
      at map (node:stream:55:20)
      at getActual (node:assert:658:23)
      at throws (node:assert:733:36)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-map.js:346:10
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)

Bun v1.1.34-debug+b186f0ba7 (macOS arm64)
